# FM_moments_constrained

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DISCUSSION.md  EXPERIMENTS.md  FORMALIZATION.tex  PROJECT_STATE.md  README.md  pyproject.toml
configs/: config.yaml
configs/data/: bridge_ot.yaml  bridge_ot_global_3k.yaml  bridge_random.yaml  gaussian_ot.yaml  gaussian_random.yaml  single_cell_eb_5d.yaml  single_cell_eb_5d_t05_ot_global.yaml  single_cell_schiebinger_pilot_20d.yaml
notebooks/: bridge_ab_comparison_analysis.ipynb  bridge_sde_visualization.ipynb  bridge_stage_a_interpolant_analysis.ipynb
scripts/: export_bridge_dataset_figure.py  export_bridge_learned_paths_figure.py  prepare_schiebinger_pilot_h5ad.py  run_bridge_ab_ot_sweep.py  run_bridge_global_ot_3k_dual_benchmark.py  run_bridge_mfm_best.py  run_experiment.py  run_pot_emd2_runtime_sweep.py  run_single_cell_eb_benchmark.py  run_single_cell_eb_stage_a_benchmark.py  run_single_cell_eb_t05_constraint_family_dual_benchmark.py  run_single_cell_schiebinger_pilot.py  run_single_cell_schiebinger_step_sufficiency_quickcheck.py
tests/: test_augmented_lagrangian.py  test_bridge_ab_pipeline.py  test_bridge_data_cache.py  test_bridge_sde_visualization.py  test_constrained_beta_schedule.py  test_constraints.py  test_metrics.py  test_mfm_core.py  test_mfm_pipeline.py  test_ot.py  test_paths.py  test_pseudo_labels.py  test_single_cell_benchmark_scripts.py  test_single_cell_data.py  test_single_cell_pipeline.py  test_single_cell_stage_a_pipeline.py  test_smoke_training.py  test_stage_a_bridge_pipeline.py
(+43 files in other folders)
