[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cfm-project"
version = "0.1.0"
description = "Constrained Flow Matching v1 with moment-constrained path learning."
readme = "PROJECT_STATE.md"
requires-python = ">=3.12"
dependencies = [
  "hydra-core>=1.3.2,<2.0.0",
  "matplotlib>=3.9.0,<4.0.0",
  "numpy>=2.0.0,<3.0.0",
  "scipy>=1.14.0,<2.0.0",
  "torch>=2.4.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

